--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,15 @@
         "skovmand/mailchimp-laravel": "1.0.8",
         "spatie/laravel-activitylog": "^2.0",
         "stripe/stripe-php": "^4.12",
+        "yajra/laravel-datatables-oracle": "~8.0",
         "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
-        "filp/whoops" : "~2.0"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
